--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Hero banner</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Hero banner</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="css/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <div>
+      <img src="images/placeholder-16by9.svg" alt="">
+      <div class="img-flex">class=".banner">
+        <div>
+          <h2>Giant space moths invade Earth</h2>
+          <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths<p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
