--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div>
-      <img src="images/placeholder-16by9.svg" alt="">
-      <div class="img-flex">
-        <div class=".banner">
+    <div class="banner">
+      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+        <div class="banner-content">
           <h2>Giant space moths invade Earth</h2>
-          <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths<p>
+          <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
         </div>
-      </div>
     </div>
   </body>
 </html>
